<resources>
    <string name="app_name">Kroubi</string>
    <string name="home_activity_title">Kroubi</string>
    <string name="title_activity_image_presenter" translatable="false">ImagePresenter</string>
    <string name="egypt_code" translatable="false">+2</string>
    <string name="attachment_icon" translatable="false">Attachment icon</string>
    <string name="seen_icon" translatable="false">seen icon</string>
    <string name="message_image" translatable="false">message image</string>
    <string name="notification_image" translatable="false">notification_image</string>
    <string name="profile_transition" translatable="false">share_profile_transition</string>

    <string name="please_wait">please wait ..</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="verify_code">Verify Code</string>
    <string name="we_will_send_code">We will send an SMS message to verify your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="no_contacts">Non of your contacts is using kroubi</string>
    <string name="sign_out">Sign out</string>
    <string name="msg_login_success">Login Successful</string>
    <string name="verify_phone_number">Please enter your phone number!</string>
    <string name="verify_sign_in_code">please enter verification Code</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="chats">CHATS</string>
    <string name="status">Status</string>
    <string name="calls">CALLS</string>
    <string name="msg_no_chat_yet">No chats here yet, send a message now to start conversation</string>
    <string name="type_a_message">Type a message</string>
    <string name="document">Document</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="audio">Audio</string>
    <string name="select_contact">Select contact</string>
    <string name="yesterday">yesterday</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="invalid_phone_number">Invalid phone number!</string>
    <string name="invalid_verification_code">Invalid verification code!</string>
    <string name="network_error_msg">Something went wrong, please try again!</string>
    <string name="typing">Typing…</string>
    <string name="online">online</string>
    <string name="loading">Loading…</string>
    <string name="check_network">Check your network connection!</string>
    <string name="phone_digits">0123456789</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="detect_phone_automatically">Waiting to automatically detect an SMS sent to</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="verify">Verify %1$s</string>
    <string name="verify_phone_failed">Failed to verify phone number!</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="intro">intro</string>
    <string name="first_intro_title">Welcome to Kroubi</string>
    <string name="first_intro_description">Enjoy the real time messaging experience</string>
    <string name="second_intro_title">Get connected </string>
    <string name="second_intro_description">Find your contacts users and send them text and photo messages</string>
    <string name="third_intro_title">Let\'s start</string>
    <string name="third_intro_description">What are you waiting for? login now in avery easy step to get started</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_provide_your_name_and_an_optional_profile_photo">Please provide your name and an optional profile photo</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="next">Next</string>
    <string name="updated_successfully">updated successfully!</string>
    <string name="upload_profile_failed">Failed to upload profile image, please try again!</string>
    <string name="no_chat_yet">No chats here yet, Sync your contacts now to start chatting</string>
    <string name="name">Name</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_status">Edit status</string>
    <string name="add_your_name">Add your name</string>
    <string name="current_status">Current set to</string>
    <string name="what_are_you_thinking_of">What are you thinking of?</string>
    <string name="account">Account</string>
    <string name="chatss">Chats</string>
    <string name="theme_wallpapers_chat_history">Theme, Wallpapers, Chat history</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="faq_contact_us_privacy_policy">FAQ, contact us, privacy policy</string>
    <string name="storage_and_data">Storage and data</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="message_group_call_tones">Message, group, call tones</string>
    <string name="help">Help</string>
    <string name="notifications">Notifications</string>
    <string name="type_message">Please type a message to be sent</string>
    <string name="photo">Photo</string>
    <string name="enter_name">Please enter your full name!</string>
    <string name="Sync_contacts">Sync Contacts</string>
    <string name="welcome">Welcome</string>

    <array name="status_list">
        <item>Available</item>
        <item>Busy</item>
        <item>Out with friends</item>
        <item>At school</item>
        <item>At the movie</item>
        <item>At work</item>
        <item>Battery about to die</item>
        <item>In a meeting</item>
        <item>At the gym</item>
        <item>Sleeping</item>
        <item>Urgent calls only</item>
    </array>
</resources>
